tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_turbofish_turbofish_in_struct_pattern_generic_count_mismatch/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: struct Foo expects 1 generic but 2 were given
  ┌─ src/main.nr:8:16
  │
8 │         let Foo::<i32, i64> { x } = Foo { x: value };
  │                ------------
  │

Aborting due to 1 previous error
